--- a/data.tex
+++ b/data.tex
@@ -285,7 +285,7 @@
 %=============================================================================
 \renewcommand{\vtemplateauthor}{lionov}
 \pgfplotsset{compat=newest}
-\usepackage{mathtools, amsmath, amssymb, tikz, rotating}
+\usepackage{mathtools, amsmath, amssymb, tikz, rotating, caption, nicefrac}
 \newcommand\encircle[1]{%
   \tikz[baseline=(X.base)] 
     \node (X) [draw, shape=circle, inner sep=0] {\strut #1};}
